--- a/config/theoneprobe.cfg
+++ b/config/theoneprobe.cfg
@@ -29,7 +29,7 @@ client {
     I:boxThickness=2
 
     # The distance to the top side of the screen. Use -1 if you don't want to set this [range: -1 ~ 10000, default: 5]
-    I:boxTopY=5
+    I:boxTopY=-1
 
     # Color of the border of the chest contents box (0 to disable) [default: ff006699]
     S:chestContentsBorderColor=ff006699
@@ -275,7 +275,7 @@ theoneprobe {
     I:showTankSetting=2
 
     # If true there will be a readme note for first-time players [default: true]
-    B:spawnNote=true
+    B:spawnNote=false
 
     # If true there will be a bauble version of the probe if baubles is present [default: true]
     B:supportBaubles=true
