--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /local
 /config/jei/worldSettings.cfg
 /config/splash.properties
-/XaeroWayPoints
+/XaeroWayPoints*
 /XaeroWorldMap
 /options.txt
 /patchouli_data.json
